--- a/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop.csproj
+++ b/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop.csproj
@@ -32,8 +32,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +57,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
     <Compile Include="Controlador\DatoDocumentoElectronico.cs" />
     <Compile Include="Controlador\DatosClientes.cs" />
     <Compile Include="Controlador\DatosDocumento.cs" />
@@ -54,10 +69,76 @@
     <Compile Include="Controlador\DatosOperacion.cs" />
     <Compile Include="Controlador\DatosProductos.cs" />
     <Compile Include="Controlador\DatosUnidadMedida.cs" />
+    <Compile Include="DatosFactura.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DatosFactura.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DatosFactura.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DatosFactura.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DatosFactura.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DetalleFactura.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Documento.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FactronLCTDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FactronLCTDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="FacturacionElectronica.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="listarReporte_Result.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Modelo\Entidades\Productos.cs" />
+    <Compile Include="Moneda.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Productos.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Tipo_DocumentoElectronico.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tipo_igv.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tipo_NotaCredito.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tipo_NotaDebito.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Tipo_Operacion.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Unidad_Medida.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Usuarios.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\Clientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Clientes.Designer.cs">
+      <DependentUpon>Clientes.cs</DependentUpon>
     </Compile>
     <Compile Include="Vista\Consulta.cs">
       <SubType>Form</SubType>
@@ -70,6 +151,24 @@
     </Compile>
     <Compile Include="Vista\Index.Designer.cs">
       <DependentUpon>Index.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\InsertarCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\InsertarCliente.Designer.cs">
+      <DependentUpon>InsertarCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\InsertarFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\InsertarFactura.Designer.cs">
+      <DependentUpon>InsertarFactura.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\InsertarServicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\InsertarServicio.Designer.cs">
+      <DependentUpon>InsertarServicio.cs</DependentUpon>
     </Compile>
     <Compile Include="Vista\Login.cs">
       <SubType>Form</SubType>
@@ -84,7 +183,6 @@
     <Compile Include="Modelo\Entidades\Moneda.cs" />
     <Compile Include="Modelo\Entidades\NotaCredito.cs" />
     <Compile Include="Modelo\Entidades\NotaDebito.cs" />
-    <Compile Include="Modelo\Entidades\Productos.cs" />
     <Compile Include="Modelo\Entidades\TipoDocumentoElectronico.cs" />
     <Compile Include="Modelo\Entidades\TipoIGV.cs" />
     <Compile Include="Modelo\Entidades\TipoOperacion.cs" />
@@ -92,17 +190,35 @@
     <Compile Include="Modelo\Entidades\Usuarios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vista\Servicios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\Servicios.Designer.cs">
+      <DependentUpon>Servicios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Ventas.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Vista\Ventas.Designer.cs">
       <DependentUpon>Ventas.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vista\Clientes.resx">
+      <DependentUpon>Clientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\Consulta.resx">
       <DependentUpon>Consulta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\InsertarCliente.resx">
+      <DependentUpon>InsertarCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\InsertarFactura.resx">
+      <DependentUpon>InsertarFactura.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\InsertarServicio.resx">
+      <DependentUpon>InsertarServicio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -112,9 +228,31 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vista\Servicios.resx">
+      <DependentUpon>Servicios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\Ventas.resx">
       <DependentUpon>Ventas.cs</DependentUpon>
     </EmbeddedResource>
+    <EntityDeploy Include="DatosFactura.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DatosFactura.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DatosFactura.edmx.diagram">
+      <DependentUpon>DatosFactura.edmx</DependentUpon>
+    </None>
+    <None Include="FactronLCTDataSet.xsc">
+      <DependentUpon>FactronLCTDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="FactronLCTDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>FactronLCTDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="FactronLCTDataSet.xss">
+      <DependentUpon>FactronLCTDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -128,11 +266,23 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\logo_compuFac1.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DatosFactura.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DatosFactura.Context.cs</LastGenOutput>
+      <DependentUpon>DatosFactura.edmx</DependentUpon>
+    </Content>
+    <Content Include="DatosFactura.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DatosFactura.edmx</DependentUpon>
+      <LastGenOutput>DatosFactura.cs</LastGenOutput>
+    </Content>
     <Content Include="Imagenes\ventas.png" />
     <None Include="Resources\usuario.png" />
     <None Include="Resources\cuenta_bancaria.png" />
