--- a/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop.csproj
+++ b/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop.csproj
@@ -87,6 +87,7 @@
     <Compile Include="DetalleFactura.cs">
       <DependentUpon>DatosFactura.tt</DependentUpon>
     </Compile>
+    <Compile Include="DGVPrinter.cs" />
     <Compile Include="Documento.cs">
       <DependentUpon>DatosFactura.tt</DependentUpon>
     </Compile>
