--- a/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/App.config
+++ b/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/App.config
@@ -7,17 +7,14 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  <connectionStrings>
-    <add name="FactronLCTEntities" connectionString="metadata=res://*/DatosFactura.csdl|res://*/DatosFactura.ssdl|res://*/DatosFactura.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=FactronLCT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="FacturacionElectronicaDesktop.Properties.Settings.FactronLCTConnectionString"
-      connectionString="Data Source=.;Initial Catalog=FactronLCT;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<connectionStrings>
+  <add name="FactronLCTEntities" connectionString="metadata=res://*/DatosFactura.csdl|res://*/DatosFactura.ssdl|res://*/DatosFactura.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=FactronLCT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
 </configuration>
