--- a/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop.csproj
+++ b/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop/FacturacionElectronicaDesktop.csproj
@@ -38,6 +38,11 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.140.1000.523\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
     </Reference>
@@ -142,6 +147,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ResumenBoleta.cs">
+      <DependentUpon>DatosFactura.tt</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="TipoCuentaBancaria.cs">
       <DependentUpon>DatosFactura.tt</DependentUpon>
@@ -184,6 +192,12 @@
     </Compile>
     <Compile Include="Vista\CuentaBancaria.Designer.cs">
       <DependentUpon>CuentaBancaria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vista\DetalleResumen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\DetalleResumen.Designer.cs">
+      <DependentUpon>DetalleResumen.cs</DependentUpon>
     </Compile>
     <Compile Include="Vista\Index.cs">
       <SubType>Form</SubType>
@@ -253,6 +267,12 @@
     <Compile Include="Modelo\Entidades\Usuarios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vista\ResumenBoleta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vista\ResumenBoleta.Designer.cs">
+      <DependentUpon>ResumenBoleta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vista\Servicios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -273,6 +293,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\CuentaBancaria.resx">
       <DependentUpon>CuentaBancaria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\DetalleResumen.resx">
+      <DependentUpon>DetalleResumen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Index.resx">
       <DependentUpon>Index.cs</DependentUpon>
@@ -305,6 +328,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\ResumenBoleta.resx">
+      <DependentUpon>ResumenBoleta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vista\Servicios.resx">
       <DependentUpon>Servicios.cs</DependentUpon>
